--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
     <main>
         <!-- Hero start -->
         <section>
-            <div
-                class="container grid row  justify-content-between align-items-center mx-auto border border-success mt-5">
+            <div class="container grid row  justify-content-between align-items-center mx-auto mt-5">
                 <div class="col-12 col-md-6 ">
                     <div class="d-grid gap-xl-2">
                         <h2 class="fs-5"><span class="hello">Hello...</span> <br> this is <span class="fw-bold">Abu
