--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
                         <h2 class="fs-5"><span class="hello">Hello...</span> <br> this is <span class="fw-bold">Abu
                                 Rayhan</span></h2>
                         <h1 class="fs-2">Senior <span class="text-success">Web Developer</span></h1>
-                        <p class="fs-5 subtitle">Committed to Crafting Unique and Meaningful Designs. With Expertise in
+                        <p class="fs-5 subtitle">I am Abu Rayhan. I am currently studying Diploma in engineering at
+                            Computer Technology at Bogura Polytechnic Institute. I am Committed to Crafting Unique and
+                            Meaningful Designs. With Expertise in
                             Various
                             Design Disciplines, I Aim to Provide
                             Visually Stunning and Functionally Effective Solutions for Every Client.</p>
@@ -75,7 +77,7 @@
         <!-- Hero end -->
 
         <!-- projects start -->
-        <section class="container mt-xxl-5 ">
+        <section id="projects" class="container mt-xxl-5 ">
             <h2 class="mb-4 display-5 text-center">Recent Projects</h2>
             <hr class="w-50 mx-auto mb-5 mb-xl-9 border-dark-subtle">
             <!-- project 1 -->
@@ -125,13 +127,12 @@
                     <!-- p 4 -->
                     <div class="col-md-4 mt-4">
                         <div class="card professional-card">
-                            <img src="img/Screenshot_3.jpg" class="card-img-top" alt="Card Image">
+                            <img src="img/Screenshot_2.jpg" class="card-img-top" alt="Card Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Fitness Care</h5>
-                                <p class="card-text">Unlock your best self with expert tips and tricks, healthy recipes,
-                                    and inspiring stories. Join us today and
-                                    start your fitness journey!</p>
-                                <a href="https://aburayhan-bpi.github.io/fitness-responsive-website/"
+                                <h5 class="card-title">Rinterio Architecht</h5>
+                                <p class="card-text">This masterpiece blends, featuring lines, premium materials, and
+                                    expansive glass that fills the space with natural light.</p>
+                                <a href="https://aburayhan-bpi.github.io/rinterio-architect/"
                                     class="btn btn-success w-100">Live Link</a>
                             </div>
                         </div>
@@ -139,13 +140,12 @@
                     <!-- p 5 -->
                     <div class="col-md-4 mt-4">
                         <div class="card professional-card">
-                            <img src="img/Screenshot_1.jpg" class="card-img-top" alt="Card Image">
+                            <img src="img/Screenshot_58.jpg" class="card-img-top" alt="Card Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Donation Bangladesh</h5>
-                                <p class="card-text">Empowering needy people through your generous support. Together, we
-                                    can create a
-                                    brighter future for those in need.</p>
-                                <a href="https://aburayhan-bpi.github.io/donate-bangladesh/"
+                                <h5 class="card-title">G3 Architechts</h5>
+                                <p class="card-text">This masterpiece blends, featuring lines, premium materials, and
+                                    expansive glass that fills the space with natural light.</p>
+                                <a href="https://aburayhan-bpi.github.io/g3-architects-website/"
                                     class="btn btn-success w-100">Live Link</a>
                             </div>
                         </div>
@@ -153,13 +153,14 @@
                     <!-- p 6 -->
                     <div class="col-md-4 mt-4">
                         <div class="card professional-card">
-                            <img src="img/Screenshot_5.jpg" class="card-img-top" alt="Card Image">
+                            <img src="img/Screenshot_77.jpg" class="card-img-top" alt="Card Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Personal Portfolio</h5>
+                                <h5 class="card-title">Demo Bank</h5>
                                 <p class="card-text">Web development is essential because it allows you to create,
                                     maintain websites, driving opportunities
                                     in the digital world.</p>
-                                <a href="#" class="btn btn-success w-100">Live Link</a>
+                                <a href="https://aburayhan-bpi.github.io/payoo-mfs/" class="btn btn-success w-100">Live
+                                    Link</a>
                             </div>
                         </div>
                     </div>
@@ -169,7 +170,7 @@
         <!-- projects end -->
 
         <!-- my skills start -->
-        <section class="container mt-xxl-5">
+        <section id="skills" class="container mt-xxl-5">
             <!-- Skill 1 - Bootstrap Brain Component -->
             <section class="bsb-skill-1 bg-light py-3 py-md-5">
                 <div class="container">
@@ -247,7 +248,7 @@
         <!-- my skills end -->
 
         <!-- contact us start -->
-        <div class="container mt-5">
+        <div id="contact" class="container mt-5">
             <div class="row justify-content-center">
                 <div class="col-md-10">
                     <h3 class="heading mb-4 text-center">Let's talk about everything!</h3>
